--- a/frontend/src/app/dashboard/dashboard.component.scss
+++ b/frontend/src/app/dashboard/dashboard.component.scss
@@ -175,43 +175,39 @@
   height: 18px;
 }
 
-.lastest-replacements-table {
+.lastest-blocks-table {
   width: 100%;
   text-align: left;
-  table-layout:fixed;
   tr, td, th {
     border: 0px;
-    padding-top: 0.71rem !important;
-    padding-bottom: 0.75rem !important;
+    padding-top: 0.65rem !important;
+    padding-bottom: 0.7rem !important;
   }
-  td {
-    overflow:hidden;
-    width: 25%;
+  .table-cell-height {
+    width: 15%;
   }
-  .table-cell-txid {
-    width: 25%;
-    text-align: start;
+  .table-cell-mined {
+    width: 35%;
+    text-align: left;
   }
-  .table-cell-old-fee {
-    width: 25%;
-    text-align: end;
-
-    @media(max-width: 1080px) {
+  .table-cell-transaction-count {
+    display: none;
+    text-align: right;
+    width: 20%;
+    display: table-cell;
+  }
+  .table-cell-size {
+    display: none;
+    text-align: center;
+    width: 30%;
+    @media (min-width: 485px) {
+      display: table-cell;
+    }
+    @media (min-width: 768px) {
       display: none;
     }
-  }
-  .table-cell-new-fee {
-    width: 20%;
-    text-align: end;
-  }
-  .table-cell-badges {
-    width: 23%;
-    padding-right: 0;
-    padding-left: 5px;
-    text-align: end;
-
-    .badge {
-      margin-left: 5px;
+    @media (min-width: 992px) {
+      display: table-cell;
     }
   }
 }
