dogecoin: BTC -> DOGE

--- a/frontend/src/app/components/about/about.component.html
+++ b/frontend/src/app/components/about/about.component.html
@@ -216,8 +216,8 @@
         <img class="image" src="/resources/profile/raspiblitz.svg" />
         <span>RaspiBlitz</span>
       </a>
-      <a href="https://github.com/mynodebtc/mynode" target="_blank" title="myNode">
-        <img class="image" src="/resources/profile/mynodebtc.png" />
+      <a href="https://github.com/mynodedoge/mynode" target="_blank" title="myNode">
+        <img class="image" src="/resources/profile/mynodedoge.png" />
         <span>myNode</span>
       </a>
       <a href="https://code.samourai.io/ronindojo/RoninDojo" target="_blank" title="RoninDojo">
@@ -236,9 +236,9 @@
         <img class="image" src="/resources/profile/start9.png" />
         <span>StartOS</span>
       </a>
-      <a href="https://github.com/btcpayserver/btcpayserver" target="_blank" title="BTCPay Server">
-        <img class="image not-rounded" src="/resources/profile/btcpayserver.svg" />
-        <span>BTCPay</span>
+      <a href="https://github.com/dogepayserver/dogepayserver" target="_blank" title="DOGEPay Server">
+        <img class="image not-rounded" src="/resources/profile/dogepayserver.svg" />
+        <span>DOGEPay</span>
       </a>
       <a href="https://github.com/bisq-network/bisq" target="_blank" title="Bisq">
         <img class="image" src="/resources/profile/bisq_network.png" />
