--- a/frontend/src/app/dashboard/dashboard.component.html
+++ b/frontend/src/app/dashboard/dashboard.component.html
@@ -18,7 +18,7 @@
       <div class="card graph-card">
         <div class="card-body pl-0">
           <div style="padding-left: 1.25rem;">
-            <ng-container *ngTemplateOutlet="stateService.network === 'liquid' ? lbtcPegs : mempoolTable; context: { $implicit: mempoolInfoData }"></ng-container>
+            <ng-container *ngTemplateOutlet="stateService.network === 'liquid' ? ldogePegs : mempoolTable; context: { $implicit: mempoolInfoData }"></ng-container>
             <hr>
           </div>
           <ng-template [ngIf]="(network$ | async) !== 'liquid'" [ngIfElse]="liquidPegs">
@@ -209,12 +209,12 @@
   </div>
 </ng-template>
 
-<ng-template #lbtcPegs let-mempoolInfoData>
+<ng-template #ldogePegs let-mempoolInfoData>
   <div class="mempool-info-data">
     <div class="item">
-      <h5 class="card-title" i18n="dashboard.lbtc-pegs-in-circulation">L-BTC in circulation</h5>
+      <h5 class="card-title" i18n="dashboard.ldoge-pegs-in-circulation">L-DOGE in circulation</h5>
       <ng-container *ngIf="(liquidPegsMonth$ | async) as liquidPegsMonth; else loadingTransactions">
-        <p class="card-text">{{ liquidPegsMonth.series.slice(-1)[0] | number: '1.2-2' }} <span>L-BTC</span></p>
+        <p class="card-text">{{ liquidPegsMonth.series.slice(-1)[0] | number: '1.2-2' }} <span>L-DOGE</span></p>
       </ng-container>
     </div>
   </div>
