dogecoin: Remove usage of trademarks

--- a/frontend/src/app/lightning/group/group.component.html
+++ b/frontend/src/app/lightning/group/group.component.html
@@ -5,7 +5,7 @@
     <div class="logo-container">
       <app-svg-images name="officialMempoolSpace" viewBox="0 0 125 126"></app-svg-images>
     </div>
-    <h1>The Mempool Open Source Project</h1>
+    <h1>Dogepool</h1>
   </div>
 
   <div class="box">
@@ -15,7 +15,7 @@
           <tbody>
             <tr>
               <td>Description</td>
-              <td><div class="description-text">These are the Lightning nodes operated by The Mempool Open Source Project that provide data for the mempool.space website. Connect to us!
+              <td><div class="description-text">These are the Lightning nodes operated by The Dogepool Open Source Project that provide data for the dogepool.space website. Connect to us!
                 </div>
               </td>
             </tr>
