dogecoin: Add new colors

--- a/frontend/src/app/components/block-overview-graph/block-overview-graph.component.scss
+++ b/frontend/src/app/components/block-overview-graph/block-overview-graph.component.scss
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   padding-bottom: 100%;
-  background: #181b2d;
+  background: #1a1a1a;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -34,7 +34,7 @@
 
 .loader-wrapper {
   position: absolute;
-  background: #181b2d7f;
+  background: #1a1a1a7f;
   left: 0;
   right: 0;
   top: 0;
