--- a/frontend/src/app/components/fees-box/fees-box.component.scss
+++ b/frontend/src/app/components/fees-box/fees-box.component.scss
@@ -1,5 +1,5 @@
 .card-title {
-  color: #4a68b9;
+  color: #fff;
   font-size: 10px;
   margin-bottom: 4px;
   font-size: 1rem;
@@ -102,10 +102,10 @@
     height: 22px;
     background: repeating-linear-gradient(
       90deg,
-      rgb(45, 51, 72),
-      rgb(45, 51, 72) 2px,
-      rgb(29, 31, 49) 2px,
-      rgb(29, 31, 49) 4px
+      rgb(40, 40, 40),
+      rgb(50, 50, 50) 2px,
+      rgb(60, 60, 60) 2px,
+      rgb(70, 70, 70) 4px
     );  
   }
 }
