--- a/frontend/src/app/bisq/bisq-main-dashboard/bisq-main-dashboard.component.scss
+++ b/frontend/src/app/bisq/bisq-main-dashboard/bisq-main-dashboard.component.scss
@@ -67,12 +67,12 @@
 
 
   .card {
-    background-color: #1d1f31;
+    background-color: #1f1f1f;
     height: 100%;
   }
 
   .card-title {
-    color: #4a68b9;
+    color: #fff;
     font-size: 1rem;
   }
 
@@ -85,7 +85,7 @@
   .progress {
     display: inline-flex;
     width: 100%;
-    background-color: #2d3348;
+    background-color: #4d4d4d;
     height: 1.1rem;
   }
 
