--- a/frontend/src/app/components/block/block.component.scss
+++ b/frontend/src/app/components/block/block.component.scss
@@ -172,9 +172,9 @@ h1 {
   }
 
   a {
-    color: #1ad8f4;
+    color: #4c92ff;
     &:hover, &:focus {
-      color: #09a3ba;
+      color: #2368d9;
       display: inline-block;
     }
   }
