--- a/frontend/src/app/components/difficulty-mining/difficulty-mining.component.scss
+++ b/frontend/src/app/components/difficulty-mining/difficulty-mining.component.scss
@@ -79,12 +79,12 @@
 }
 
 .card {
-  background-color: #1d1f31;
+  background-color: #1f1f1f;
   height: 100%;
 }
 
 .card-title {
-  color: #4a68b9;
+  color: #fff;
   font-size: 1rem;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -94,7 +94,7 @@
 .progress {
   display: inline-flex;
   width: 100%;
-  background-color: #2d3348;
+  background-color: #4d4d4d;
   height: 1.1rem;
   max-width: 180px;
 }
