--- a/frontend/src/app/components/difficulty/difficulty.component.scss
+++ b/frontend/src/app/components/difficulty/difficulty.component.scss
@@ -91,19 +91,19 @@
 }
 
 .card {
-  background-color: #1d1f31;
+  background-color: #1f1f1f;
   height: 100%;
 }
 
 .card-title {
-  color: #4a68b9;
+  color: #fff;
   font-size: 1rem;
 }
 
 .progress {
   display: inline-flex;
   width: 100%;
-  background-color: #2d3348;
+  background-color: #4d4d4d;
   height: 1.1rem;
   max-width: 180px;
 }
@@ -128,7 +128,7 @@
 
 .main-title {
   position: relative;
-  color: #ffffff91;
+  color: #fff;
   margin-top: -13px;
   font-size: 10px;
   text-transform: uppercase;
@@ -177,10 +177,10 @@
 .epoch-blocks {
   display: block;
   width: 100%;
-  background: #2d3348;
+  background: #1a1a1a;
 
   .rect {
-    fill: #2d3348;
+    fill: #1a1a1a;
 
     &.behind {
       fill: #D81B60;
