--- a/frontend/src/app/components/footer/footer.component.scss
+++ b/frontend/src/app/components/footer/footer.component.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   width: 100%;
   height: 60px;
-  background-color: #1d1f31;
+  background-color: #1f1f1f;
   box-shadow: 15px 15px 15px 15px #000;
   z-index: 10;
 }
@@ -39,7 +39,7 @@
 }
 
 .mempoolSize {
-  color: #4a68b9;
+  color: #fff;
 }
 
 .unconfirmedTx {
@@ -55,7 +55,7 @@
 .progress {
   display: inline-flex;
   width: 160px;
-  background-color: #2d3348;
+  background-color: #4d4d4d;
   height: 1.1rem;
 }
 
