--- a/frontend/src/app/components/master-page/master-page.component.scss
+++ b/frontend/src/app/components/master-page/master-page.component.scss
@@ -1,5 +1,5 @@
 li.nav-item.active {
-  background-color: #653b9c;
+  background-color: #af830b;
 }
 
 fa-icon {
@@ -110,7 +110,7 @@ nav {
 }
 
 .mainnet.active {
-  background-color: #653b9c;
+  background-color: #af830b;
 }
 
 .liquid.active {
