--- a/frontend/src/app/components/mining-dashboard/mining-dashboard.component.scss
+++ b/frontend/src/app/components/mining-dashboard/mining-dashboard.component.scss
@@ -7,7 +7,7 @@
 }
 
 .card {
-  background-color: #1d1f31;
+  background-color: #1f1f1f;
 }
 
 .graph-card {
@@ -19,10 +19,10 @@
 
 .card-title {
   font-size: 1rem;
-  color: #4a68b9;
+  color: #fff;
 }
 .card-title > a {
-  color: #4a68b9;
+  color: #fff;
 }
 
 .card-body.pool-ranking {
