--- a/frontend/src/app/components/pool/pool.component.scss
+++ b/frontend/src/app/components/pool/pool.component.scss
@@ -87,7 +87,7 @@ div.scrollable {
 }
 
 .progress {
-  background-color: #2d3348;
+  background-color: #4d4d4d;
 }
 
 .coinbase {
@@ -189,7 +189,7 @@ div.scrollable {
 }
 
 .block-count-title {
-  color: #4a68b9;
+  color: #fff;
   font-size: 14px;
 }
 
