--- a/frontend/src/app/components/transactions-list/transactions-list.component.scss
+++ b/frontend/src/app/components/transactions-list/transactions-list.component.scss
@@ -94,7 +94,7 @@ td.amount {
 	margin-top: 10px;
 }
 .assetBox {
-	background-color: #653b9c90;
+	background-color: #4c92ff90;
 }
 
 .details-container {
@@ -129,7 +129,7 @@ h2 {
 }
 
 .highlight {
-	background-color: #181b2d;
+	background-color: #3a3a3a;
 }
 
 .summary {
