--- a/frontend/src/app/lightning/lightning-dashboard/lightning-dashboard.component.scss
+++ b/frontend/src/app/lightning/lightning-dashboard/lightning-dashboard.component.scss
@@ -10,7 +10,7 @@
 }
 
 .card {
-  background-color: #1d1f31;
+  background-color: #1f1f1f;
 }
 
 .graph-card {
@@ -22,10 +22,10 @@
 
 .card-title {
   font-size: 1rem;
-  color: #4a68b9;
+  color: #fff;
 }
 .card-title > a {
-  color: #4a68b9;
+  color: #fff;
 }
 
 .card-body.pool-ranking {
