--- a/frontend/src/app/lightning/nodes-rankings-dashboard/nodes-rankings-dashboard.component.scss
+++ b/frontend/src/app/lightning/nodes-rankings-dashboard/nodes-rankings-dashboard.component.scss
@@ -9,15 +9,15 @@
 }
 
 .card {
-  background-color: #1d1f31;
+  background-color: #1f1f1f;
 }
 
 .card-title {
   font-size: 1rem;
-  color: #4a68b9;
+  color: #fff;
 }
 .card-title > a {
-  color: #4a68b9;
+  color: #fff;
 }
 
 .card-text {
