--- a/frontend/src/app/shared/components/global-footer/global-footer.component.scss
+++ b/frontend/src/app/shared/components/global-footer/global-footer.component.scss
@@ -1,5 +1,5 @@
 footer {
-  background-color: #1d1f31;
+  background-color: #1f1f1f;
   margin-top: 30px;
 }
 
@@ -27,7 +27,7 @@ footer .row.main .branding .btn {
 }
 
 footer .row.main .branding button.account {
-  background-color: #2d3348;
+  background-color: #4d4d4d;
 }
 
 footer .row.main .branding .cta {
@@ -48,7 +48,7 @@ footer .row.main .links > div:first-child {
 }
 
 footer .row.main .links .category {
-  color: #4a68b9;
+  color: #fff;
   font-weight: 700;
 }
 
@@ -75,7 +75,7 @@ footer .row.social-links svg {
 
 footer .row.version {
   padding: 20px !important;
-  background-color: #11131f;
+  background-color: #171717;
 }
 
 footer .row.version p {
@@ -86,7 +86,7 @@ footer .row.version p {
 }
 
 footer .row.version p a {
-  color: #09a3ba;
+  color: #4c92ff;
 }
 
 @media (max-width: 992px) {
