--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,28 +1,28 @@
 /* Bootstrap */
 
-$body-bg: #1d1f31;
+$body-bg: #1f1f1f;
 $body-color: #fff;
-$gray-800: #1d1f31;
+$gray-800: #1f1f1f;
 $gray-700: #fff;
 
 $nav-tabs-link-active-bg: #11131f;
 
-$primary: #105fb0;
-$secondary: #2d3348;
+$primary: #2368d9;
+$secondary: #4d4d4d;
 $success: #1a9436;
-$info: #1bd8f4;
+$info: #4c92ff;
 
 $h5-font-size: 1.15rem !default;
 
 $pagination-bg: $body-bg;
 $pagination-border-color: $gray-800;
 $pagination-disabled-bg:           #FFF;
-$pagination-disabled-border-color: #1d1f31;
+$pagination-disabled-border-color: #1f1f1f;
 $pagination-active-color:          #fff;
-$pagination-active-bg:             #653b9c;
+$pagination-active-bg:             #4c92ff;
 $pagination-hover-bg:              #12131e;
-$pagination-hover-border-color:     #1d1f31;
-$pagination-disabled-bg:          #1d1f31;
+$pagination-hover-border-color:     #1f1f1f;
+$pagination-disabled-bg:          #1f1f1f;
 
 $custom-select-indicator-color: #FFF;
 
@@ -31,12 +31,12 @@ $custom-select-indicator-color: #FFF;
   border: 1px solid #20263e !important;
 }
 
-$link-color:                #1bd8f4;
+$link-color:                #4c92ff;
 $link-decoration:           none !default;
-$link-hover-color:          darken($link-color, 15%) !default;
+$link-hover-color:          #2368d9 !default;
 $link-hover-decoration:     underline !default;
 
-$dropdown-bg: #1d1f31;
+$dropdown-bg: #1f1f1f;
 $dropdown-link-color: #fff;
 
 $dropdown-link-hover-color: #fff;
@@ -53,7 +53,7 @@ html, body {
 }
 
 body {
-  background-color: #11131f;
+  background-color: #171717;
   min-width: 375px;
   padding-bottom: 60px;
 }
@@ -82,7 +82,7 @@ main {
   position: relative;
   min-width: 0;
   word-wrap: break-word;
-  background-color: #24273e;
+  background-color: #1f1f1f;
   background-clip: border-box;
   border: 1px solid rgba(0,0,0,.125);
   box-shadow: 0.125rem 0.125rem 0.25rem rgba(0,0,0,0.075);
@@ -117,18 +117,22 @@ main {
 
 .form-control {
   color: #fff;
-  background-color: #2d3348;
+  background-color: #1a1a1a;
   border: 1px solid rgba(17, 19, 31, 0.2);
+}
+
+.form-control::placeholder {
+  color: #6e6e6e;
 }
 
 .form-control:focus {
   color: #fff;
-  background-color: #2d3348;
+  background-color: #1a1a1a;
 }
 
 .btn-purple {
-  background-color: #653b9c;
-  border-color: #653b9c;
+  background-color: #af830b;
+  border-color: #af830b;
 }
 
 .btn-purple:not(:disabled):not(.disabled):active, .btn-purple:not(:disabled):not(.disabled).active, .show > .btn-purple.dropdown-toggle {
@@ -146,14 +150,14 @@ main {
 
 .btn-purple:hover {
   color: #fff;
-  background-color: #533180;
-  border-color: #4d2d77;
+  background-color: #d69d00;
+  border-color: #d69d00;
 }
 
 .form-control.form-control-secondary {
   color: #fff;
-  background-color: #2d3348;
-  border: 1px solid #2d3348;
+  background-color: #1a1a1a;
+  border: 1px solid #1a1a1a;
 }
 .form-control.form-control-secondary:focus {
   color: #fff;
@@ -306,7 +310,7 @@ main {
 }
 
 .table-striped tbody tr:nth-of-type(odd) {
-  background-color: #181b2d;
+  background-color: #1a1a1a;
 }
 
 .bordertop {
@@ -518,7 +522,7 @@ html:lang(ru) .card-title {
 
 .fees-wrapper-tooltip-chart-advanced,
 .tx-wrapper-tooltip-chart-advanced {
-  background: rgba(#1d1f31, 0.98);
+  background: rgba(#1f1f1f, 0.98);
   width: 275px;
 
   thead {
@@ -674,23 +678,23 @@ h1, h2, h3 {
 }
 
 .progress-mempool {
-  background: repeating-linear-gradient(to right, #2d3348, #2d3348 0%, #105fb0 0%, #9339f4 100%);
+  background: repeating-linear-gradient(to right, #4d4d4d, #4d4d4d 0%, #e4ab10 0%, #a1790a 100%);
 }
 
 .progress-mempool.testnet {
-  background: repeating-linear-gradient(to right, #2d3348, #2d3348 0%, #1d486f 0%, #183550 100%);
+  background: repeating-linear-gradient(to right, #4d4d4d, #4d4d4d 0%, #1d486f 0%, #183550 100%);
 }
 
 .progress-mempool.signet {
-  background: repeating-linear-gradient(to right, #2d3348, #2d3348 0%, #6f1d5d 0%, #471850 100%);
+  background: repeating-linear-gradient(to right, #4d4d4d, #4d4d4d 0%, #6f1d5d 0%, #471850 100%);
 }
 
 .progress-mempool.liquid {
-  background: repeating-linear-gradient(to right, #2d3348, #2d3348 0%, #116761 0%, #183550 100%);
+  background: repeating-linear-gradient(to right, #4d4d4d, #4d4d4d 0%, #116761 0%, #183550 100%);
 }
 
 .progress-dark {
-  background-color: #181b2d;
+  background-color: #1a1a1a;
 }
 
 .progress-darklight {
@@ -702,12 +706,12 @@ h1, h2, h3 {
 }
 
 .progress.progress-health {
-  background: repeating-linear-gradient(to right, #2d3348, #2d3348 0%, #105fb0 0%, #1a9436 100%);
+  background: repeating-linear-gradient(to right, #4d4d4d, #4d4d4d 0%, #2368d9 0%, #1a9436 100%);
   justify-content: flex-end;
 }
 
 .progress-bar.progress-bar-health {
-  background: #2d3348;
+  background: #4d4d4d;
 }
 
 .mt-2-5, .my-2-5 {
@@ -1076,8 +1080,8 @@ th {
     }
 
     .collapsed {
-      background-color: #2d3348;
-      color: #1bd8f4;
+      background-color: #4d4d4d;
+      color: #3f89fc;
     }
   }
 
@@ -1095,7 +1099,7 @@ th {
   display: inline-block;
   width: 100%;
   justify-content: space-between;
-  background: #1d1f31;
+  background: #1f1f1f;
   margin: 0;
   @media (min-width: 550px) {
     width: auto;
