dogecoin: Fix difficulty and remove halving

--- a/frontend/src/app/components/difficulty-mining/difficulty-mining.component.html
+++ b/frontend/src/app/components/difficulty-mining/difficulty-mining.component.html
@@ -46,7 +46,7 @@
             <div class="progress-bar" role="progressbar" style="width: 15%; background-color: #2368d9" [ngStyle]="{'width': epochData.base}">&nbsp;</div>
           </div>
         </div>
-        <div class="item" *ngIf="showHalving">
+        <!-- <div class="item" *ngIf="showHalving">
           <h5 class="card-title" i18n="difficulty-box.next-halving" i18n-ngbTooltip="difficulty-box.next-halving"
           ngbTooltip="Next Halving" placement="bottom" #averagefee [disableTooltip]="!isEllipsisActive(averagefee)">Next Halving</h5>
           <div class="card-text">
@@ -55,7 +55,7 @@
             <ng-template #blocksSingular let-i i18n="shared.block">{{ i }} <span class="shared-block">block</span></ng-template>
           </div>
           <div class="symbol"><app-time kind="until" [time]="epochData.timeUntilHalving" [fastRender]="true" [precision]="1"></app-time></div>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
